# iMPOSTURE

./: .gitignore  README.md  app_multi.py  multiperson_posture.py  person_detector.py  phone_detector.py  pose_detector.py
Login/: README.md
Login/Auth0/: app.py  auth_flow.py
Login/UI/: app.js  dashboard.html  home.html  index.html  register.html  style.css
backend/: .gitignore  README.md  adk_production.py  detector.py  noise_detector.py  pyproject.toml  system_actions.py
frontend/: .gitignore  README.md  README_SUPABASE.md  dashboard_api.py  desktop_app.py  package.json  setup_dashboard.py  setup_desktop_launcher.py  tkinter_app.py
frontend/Login/: README.md
frontend/Login/Auth0/: .env.example  auth_flow.py
frontend/Login/UI/: app.js  dashboard.html  home.html
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/templates/: dashboard.html
