[project]
name = "awesome-pose-detection"
version = "0.1.0"
description = "🚀 Hackathon Project: AI-Powered Pose Detection with MediaPipe + YOLO Phone Detection + Awesome Visual Effects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.10.21",
    "opencv-python==4.11.0.86",
    "numpy>=1.26.4,<2.0.0",
    "ultralytics>=8.3.0",
]

[project.urls]
Repository = "https://github.com/your-username/awesome-pose-detection"

[project.scripts]
pose-detector = "pose_detector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
