[project]
name = "straightup-enhanced-detection"
version = "0.2.0"
description = "🎯 StraightUp: Enhanced Pose Detection with Noise Monitoring - MediaPipe + YOLO11n + Audio Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.10.21",
    "opencv-python==4.11.0.86",
    "numpy>=1.26.4,<2.0.0",
    "ultralytics>=8.3.0",
    "pyaudio>=0.2.11",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Repository = "https://github.com/your-username/awesome-pose-detection"

[project.scripts]
pose-detector = "pose_detector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
