[project]
name = "straightup-integrated-detection"
version = "0.3.0"
description = "🎯 StraightUp: Integrated Detection System - MediaPipe + YOLO11n + Posture Analysis + System Actions"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mediapipe>=0.10.14",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "ultralytics>=8.0.0",
    "pyaudio>=0.2.11",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "google-adk>=1.14.1",
    "win10toast>=0.9",
]

[project.urls]
Repository = "https://github.com/your-username/awesome-pose-detection"

[project.scripts]
pose-detector = "pose_detector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
